Add examples for iterating through dictionaries and sets, and enumerating tuples and dictionaries in Python

--- a/version_7/7.sectionInPython.ipynb
+++ b/version_7/7.sectionInPython.ipynb
@@ -303,6 +303,152 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31774ba",
+   "metadata": {},
+   "source": [
+    "## Iteration Dictionary and Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f4acfe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vishan 178\n",
+      "ajay 165\n",
+      "ram 172\n",
+      "siri 160\n",
+      "<class 'tuple'>\n",
+      "('vishan', 178)\n",
+      "<class 'tuple'>\n",
+      "('ajay', 165)\n",
+      "<class 'tuple'>\n",
+      "('ram', 172)\n",
+      "<class 'tuple'>\n",
+      "('siri', 160)\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\n",
+    "    \"vishan\":178,\n",
+    "    \"ajay\":165,\n",
+    "    \"ram\":172,\n",
+    "    \"siri\":160\n",
+    "}\n",
+    "\n",
+    "for name in d:\n",
+    "    height = d[name]\n",
+    "    print(name, height)\n",
+    "\n",
+    "\n",
+    "for name , height in d.items():\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be0da732",
+   "metadata": {},
+   "source": [
+    "## iterate set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad058dd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = {\n",
+    "    \"vishan\",\"vish\",\"ajay\",\"ram\",\"siri\"\n",
+    "}\n",
+    "\n",
+    "for name in s:\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22360310",
+   "metadata": {},
+   "source": [
+    "## Enumerate tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ed6f6780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 vishan\n",
+      "1 123\n",
+      "2 Kalutara\n",
+      "3 Sri Lanka\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = (\"vishan\",123,\"Kalutara\",\"Sri Lanka\")\n",
+    "for i,item in enumerate(t):\n",
+    "         print(i,item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "637bdf3a",
+   "metadata": {},
+   "source": [
+    "## Enumerate.  Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "83603df3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ('name', 'Alice')\n",
+      "name Alice\n",
+      "1 ('age', 30)\n",
+      "age 30\n",
+      "2 ('city', 'New York')\n",
+      "city New York\n",
+      "3 ('occupation', 'Engineer')\n",
+      "occupation Engineer\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\n",
+    "    \"name\": \"Alice\",\n",
+    "    \"age\": 30,\n",
+    "    \"city\": \"New York\",\n",
+    "    \"occupation\": \"Engineer\"\n",
+    "}\n",
+    "for i,x in enumerate(d.items()):\n",
+    "    name,height = x\n",
+    "    print(i,x)\n",
+    "    print(name,height)"
+   ]
   }
  ],
  "metadata": {
