Add implementation of packed and keyword arguments in Python

--- a/version_7/7.Funtions.ipynb
+++ b/version_7/7.Funtions.ipynb
@@ -46,6 +46,82 @@
     "    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7164207b",
+   "metadata": {},
+   "source": [
+    "## Default Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ef5618ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The grade for Mathematics is: 21\n",
+      "The grade for Unknown is: 85\n",
+      "The grade for Physics in the year 2022 is: 95\n",
+      "The grade for Chemistry in the year 2023 is: 88\n",
+      "The grade for Unknown in the year 2023 is: 76\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_grade_1(marks , subject=\"Unknown\"):     \n",
+    "    print(f\"The grade for {subject} is: {marks}\")\n",
+    "\n",
+    "\n",
+    "get_grade_1(21, \"Mathematics\")\n",
+    "get_grade_1(85)\n",
+    "\n",
+    "\n",
+    "# python rule ekak tami default value thina para meter ekkt passe thina okkom para meter wlt default values thinn oni\n",
+    "\n",
+    "def get_grade_2(marks, subject=\"Unknown\", year=2023):\n",
+    "    print(f\"The grade for {subject} in the year {year} is: {marks}\")\n",
+    "\n",
+    "get_grade_2(95, \"Physics\", 2022)\n",
+    "get_grade_2(88, \"Chemistry\")  # year will default to 202\n",
+    "get_grade_2(76)  # subject will default to \"Unknown\" and year to 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e90c6f3a",
+   "metadata": {},
+   "source": [
+    "## Name Arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c2c7ddc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The grade for history is: 45\n",
+      "The grade for unknown is: 78\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_grade_3(mark,subject=\"unknown\"):\n",
+    "    print(f\"The grade for {subject} is: {mark}\")\n",
+    "\n",
+    "get_grade_3(45,subject=\"history\")\n",
+    "get_grade_3(78)"
+   ]
   }
  ],
  "metadata": {
