Add examples of conditional comprehension and generator functions in Python

--- a/version_7/7.sectionInPython.ipynb
+++ b/version_7/7.sectionInPython.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ed6f6780",
    "metadata": {},
    "outputs": [
@@ -403,6 +403,7 @@
     }
    ],
    "source": [
+    "# use enumerate get index and value same time\n",
     "t = (\"vishan\",123,\"Kalutara\",\"Sri Lanka\")\n",
     "for i,item in enumerate(t):\n",
     "         print(i,item)"
