--- a/version_9/9.Section.ipynb
+++ b/version_9/9.Section.ipynb
@@ -128,6 +128,71 @@
     "b =[check_odd_even(i) for i in a]\n",
     "print(b)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c8fd708",
+   "metadata": {},
+   "source": [
+    "## conditional comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2daf4ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 32, 35, 43, 21, 90, 32, 45, 32, 12, 345, 65]\n",
+      "[{12: 'Even'}, {35: 'Odd'}, {21: 'Odd'}, {32: 'Even'}, {32: 'Even'}, {345: 'Odd'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_odd(number):\n",
+    "    return 'Odd' if number % 2 == 1 else 'Even'\n",
+    "\n",
+    "x = [12,32,35,43,21,90,32,45,32,12,345,65]\n",
+    "\n",
+    "y = [{value : is_odd(value)} for i,value in enumerate(x) if i % 2 == 0]\n",
+    "#index = i  value = value meken i index ek aragenalist eke ekak ara ekak gnnw. e kiynne i % 2 = 0 index ek ta adala value ek witrk aran pass krnw\n",
+    "\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bbb16099",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 32, 35, 43, 21, 90, 32, 45, 32, 12, 345, 65]\n",
+      "{12: 'Even', 35: 'Odd', 21: 'Odd', 32: 'Even', 345: 'Odd'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# return dictionary\n",
+    "def is_odd(number):\n",
+    "    return 'Odd' if number % 2 == 1 else 'Even'\n",
+    "\n",
+    "x = [12,32,35,43,21,90,32,45,32,12,345,65]\n",
+    "\n",
+    "y = {value : is_odd(value) for i,value in enumerate(x) if i % 2 == 0}\n",
+    "#index = i  value = value meken i index ek aragenalist eke ekak ara ekak gnnw. e kiynne i % 2 = 0 index ek ta adala value ek witrk aran pass krnw\n",
+    "\n",
+    "print(x)\n",
+    "print(y)"
+   ]
   }
  ],
  "metadata": {
